<resources>
    <string name="app_name">Voltic</string>
    <string name="title_activity_welcome1">Welcome1</string>
    <string name="listo_para_empezar">¿Listo para Empezar?</string>
    <string name="empieza_a_disfrutar_de_una_experiencia_nica_con_tu_patineta_el_ctrica">¡Empieza a disfrutar de una experiencia única con tu patineta eléctrica!</string>
    <string name="continuar">CONTINUAR</string>
    <string name="personaliza_tu_experiencia">Personaliza tu experiencia</string>
    <string name="recibe_consejos_y_sugerencias_personalizadas_para_mejorar_la_eficiencia_y_rendimiento_de_tu_patineta">Recibe consejos y sugerencias personalizadas para mejorar la eficiencia y rendimiento de tu patineta.</string>
    <string name="saltar">SALTAR</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="bienvenido_a_voltic">¡Bienvenido a Voltic!</string>
    <string name="tu_compa_ero_perfecto_para_monitorear_y_gestionar_tu_patineta_el_ctrica">Tu compañero perfecto para monitorear y gestionar tu patineta eléctrica.</string>
    <string name="monitorea_en_tiempo_real">Monitorea en Tiempo Real</string>
    <string name="obt_n_informaci_n_instant_nea_sobre_la_velocidad_distancia_recorrida_y_estado_de_la_bater_a_de_tu_patineta">Obtén información instantánea sobre la velocidad, distancia recorrida y estado de la batería de tu patineta.</string>
    <string name="voltic_app_todos_los_derechos_reservados">Voltic App® Todos los derechos reservados</string>
    <string name="si_no_ves_el_dispositivo_aseg_rate_de_que_est_encendido_y_dentro_del_rango">Si no ves el dispositivo, asegúrate de que esté encendido y dentro del rango.</string>
    <string name="por_favor_selecciona_un_dispositivo_bluetooth_cercano_para_conectarte">Por favor, selecciona un dispositivo Bluetooth cercano para conectarte.</string>
    <string name="verificando_conexi_n">VERIFICANDO CONEXIÓN</string>
    <string name="conectado">CONECTADO</string>
    <string name="desconectado">DESCONECTADO</string>
    <string name="bateria">Bateria</string>
    <string name="distancia">Distancia</string>
    <string name="tiempo">Tiempo</string>
    <string name="historial">Historial</string>
    <string name="servicios">Servicios</string>
    <string name="ajustes">Ajustes</string>
    <string name="nueva_ruta">Nueva ruta</string>
    <string name="bateriaboton">Bateria</string>
    <string name="busca_o_selecciona_un_punto_en_el_mapa">Busca o selecciona un punto en el mapa</string>
    <string name="velocidad">Velocidad</string>
    <string name="iniciar">INICIAR</string>
    <string name="pausar">PAUSAR</string>
    <string name="reanudar">REANUDAR</string>
    <string name="terminar">TERMINAR</string>
    <string name="asistente_de_conexi_n">Asistente de conexión</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="desde_d_nde_quieres_ir">¿Desde dónde quieres ir?</string>
    <string name="hacia_d_nde_quieres_ir">¿Hacia dónde quieres ir?</string>
    <string name="activar_notificaciones">Activar notificaciones</string>
    <string name="recibir_alertas_sobre_bater_a_mantenimiento_etc">Recibir alertas sobre batería, mantenimiento, etc.</string>
    <string name="frecuencia_de_notificaciones">Frecuencia de notificaciones</string>
    <string name="selecciona_la_frecuencia_de_las_notificaciones">Selecciona la frecuencia de las notificaciones</string>
    <string name="seleccionar_idioma">Seleccionar idioma</string>
    <string name="recomendaciones_personalizadas">Recomendaciones personalizadas</string>
    <string name="activar_recomendaciones_personalizadas">Activar recomendaciones personalizadas</string>
    <string name="recibir_recomendaciones_basadas_en_el_uso">Recibir recomendaciones basadas en el uso</string>
    <string name="restablecer_recomendaciones">Restablecer recomendaciones</string>
    <string name="restablecer_recomendaciones_personalizadas">Restablecer recomendaciones personalizadas</string>
    <string name="conexi_n_bluetooth">Conexión Bluetooth</string>
    <string name="reiniciar_conexi_n_bluetooth">Reiniciar conexión Bluetooth</string>
    <string name="forzar_la_reconexi_n_con_el_veh_culo">Forzar la reconexión con el vehículo</string>
    <string name="emparejar_nuevo_dispositivo">Emparejar nuevo dispositivo</string>
    <string name="conectar_con_otra_patineta_el_ctrica">Conectar con otra patineta eléctrica</string>
    <string name="apariencia">Apariencia</string>
    <string name="activar_modo_oscuro">Activar modo oscuro</string>
    <string name="activar_el_modo_oscuro_para_ahorrar_bater_a">Activar el modo oscuro para ahorrar batería</string>
    <string name="cambio_autom_tico_de_tema">Cambio automático de tema</string>
    <string name="cambiar_el_tema_autom_ticamente_seg_n_la_hora">Cambiar el tema automáticamente según la hora</string>
    <string name="personalizaci_n_de_la_interfaz">Personalización de la interfaz</string>
    <string name="unidades_de_medida">Unidades de medida</string>
    <string name="seleccionar_entre_km_h_o_mph">Seleccionar entre km/h o mph</string>
    <string name="formato_de_distancia">Formato de distancia</string>
    <string name="seleccionar_entre_kil_metros_o_millas">Seleccionar entre kilómetros o millas</string>
    <string name="informaci_n_de_la_aplicaci_n">Información de la aplicación</string>
    <string name="pol_tica_de_privacidad">Política de privacidad</string>
    <string name="consulta_nuestra_pol_tica_de_privacidad">Consulta nuestra política de privacidad</string>
    <string name="acerca_de_la_aplicaci_n">Acerca de la aplicación</string>
    <string name="versi_n_desarrollador_y_otros_detalles">Versión, desarrollador y otros detalles</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="preferencias_de_idioma">Preferencias de Idioma</string>
    <string name="cambiar_el_idioma_de_la_aplicaci_n">Cambiar el idioma de la aplicación</string>
    <string name="conectando">CONECTANDO...</string>
    <string name="nombre_del_dispositivo">Nombre del dispositivo</string>
    <string name="cancelar">Cancelar</string>
</resources>