<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ImageView for background image -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_image3"/>

    <!-- Gradient overlay -->
    <View
        android:id="@+id/gradientOverlay"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@drawable/gradient_overlay"
        android:layout_alignParentBottom="true" />

    <!-- Title TextView -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginStart="10dp"
        android:text="@string/personaliza_tu_experiencia"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Subtitle TextView -->
    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleText"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/recibe_consejos_y_sugerencias_personalizadas_para_mejorar_la_eficiencia_y_rendimiento_de_tu_patineta"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <!-- Skip Button -->
    <Button
        android:id="@+id/skipButton"
        android:layout_width="100dp"
        android:layout_height="39dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:text="@string/saltar"
        android:background="@drawable/transparent_button"
        android:textColor="#FFFFFF" />

    <!-- Next Button -->
    <Button
        android:id="@+id/nextButton"
        android:layout_width="100dp"
        android:layout_height="39dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true"
        android:text="@string/siguiente"
        android:background="@drawable/button_background_white"
        android:textColor="@color/button_text_color_white" />

    <!-- Page Indicator -->
    <LinearLayout
        android:id="@+id/pageIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@drawable/indicator_inactive"
            android:layout_margin="4dp" />

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@drawable/indicator_inactive"
            android:layout_margin="4dp" />

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@drawable/indicator_active"
            android:layout_margin="4dp" />
        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@drawable/indicator_inactive"
            android:layout_margin="4dp" />
    </LinearLayout>

</RelativeLayout>
