<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/gradient_background"
    tools:context=".BluetoothConnection2">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asistente_de_conexi_n"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?attr/splashLogoColor1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />
    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/por_favor_selecciona_un_dispositivo_bluetooth_cercano_para_conectarte"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/title_text"
        android:textSize="15sp"
        android:textStyle="normal"
        android:textColor="?attr/splashTextColor"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        android:layout_width="600dp"
        android:layout_height="600dp"
        android:layout_below="@id/title_text"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_below="@id/title_text"
        android:layout_marginTop="200dp"
        android:layout_centerInParent="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />
    <TextView
        android:id="@+id/subtitle_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/si_no_ves_el_dispositivo_aseg_rate_de_que_est_encendido_y_dentro_del_rango"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/lottieAnimationView"
        android:textSize="15sp"
        android:textStyle="normal"
        android:textColor="?attr/splashTextColor"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <RelativeLayout
        android:id="@+id/devices_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />
</RelativeLayout>